--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   provider: ^6.1.5+1
   path_provider: ^2.1.5
   url_launcher: ^6.3.2
+  expressions: ^0.2.5+3
 
 dev_dependencies:
   flutter_test:
